added onCreate channel and onDelete message and fix onCreate message